--- a/package.json
+++ b/package.json
@@ -37,6 +37,6 @@
   },
   "description": "task by kawa space",
   "main": "index.js",
-  "author": "gauravsinhaweb <sinhagaaurav37@gmail.com>",
+  "author": "gauravsinhaweb <sinhagaurav.me@gmail.com>",
   "license": "MIT"
 }
